--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,5 +1,7 @@
 .home {
-    padding-top: 400px;
-    display: flex;
-    padding: 15px;
+  background-color: white;
+  padding-top: 400px;
+  display: flex;
+  padding: 15px;
+  height: 100%;
 }
