--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -3,5 +3,24 @@
   padding-top: 400px;
   display: flex;
   padding: 15px;
-  height: 100%;
+  min-height: 100vh;
+  margin-bottom: -100px;
+}
+.select-author select {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  .home {
+    display: flex;
+    flex-direction: column;
+  }
+  .select-author select {
+    display: block;
+    margin-left: 25px;
+    padding: 5px 10px;
+    border: none;
+    background-color: bisque;
+    border-radius: 10px;
+  }
 }
