--- a/src/sass/addItem.scss
+++ b/src/sass/addItem.scss
@@ -1,6 +1,5 @@
 .add {
   background-image: url("../assets/wallpaper.png");
-
   position: absolute;
   width: 60%;
   height: 330px;
@@ -10,14 +9,14 @@
   right: 0;
   margin: auto;
   border-radius: 20px;
-  padding: 40px;
+  padding: 20px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
     rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
     rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   &__form {
     display: flex;
     flex-direction: column;
-    margin-top: 20px;
+     margin-top: 20px;
     padding: 4px 5px;
     align-items: center;
     transition: transform 0.5s;
@@ -26,7 +25,7 @@
       width: 280px;
       text-align: left;
       padding: 4px;
-      font-size: 20px;
+      font-size: 16px;
       & > input {
         padding: 13px 0 0 0;
         margin-bottom: 5px;
@@ -35,6 +34,7 @@
         border-bottom: 1px solid chocolate;
         font-size: 14px;
         color: chocolate;
+
       }
     }
   }
@@ -67,7 +67,8 @@
   font-weight: 700;
   font-size: 16px;
   background-color: white;
-  padding: 10px 15px;
+  padding: 5px 8px;
+  margin-right: 20px;
   border-radius: 10px;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
