--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -1,3 +1,8 @@
+.link-home {
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .header {
   position: sticky;
   top: 0;
@@ -7,12 +12,16 @@
   justify-content: space-evenly;
   padding: 30px;
   align-items: center;
+  transition: transform 0.5s;
   &__title {
     font-family: "Lobster", cursive;
     font-size: 70px;
     color: rgb(131, 24, 21);
-
     letter-spacing: 3px;
+    text-decoration: underline;
+    &:hover {
+      transform: scale(1.1);
+    }
   }
   &__button-nav {
     margin: 10px;
@@ -31,10 +40,8 @@
 #hamburger {
   display: none;
 }
-.select-author select {
-  display: none;
-}
-@media only screen and (max-width: 763px) {
+
+@media only screen and (max-width: 768px) {
   .hamburger-items Link {
     box-sizing: border-box;
     display: flex;
@@ -62,14 +69,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-  }
-  .select-author select {
-    display: block;
-    margin-left: 25px;
-    padding: 5px 10px;
-    border: none;
-    background-color: bisque;
-    border-radius: 10px;
   }
 }
 
